@startuml

interface IView
    abstract ViewBase
        class Rect
        class SimpleText
            class TextButton
        class Image
        class Line
    abstract SwingView
        class SwingRect
        class SwingSimpleText
        class SwingTextButton
        class SwingImage
        class SwingLine

class LineProperties

IView <|-- ViewBase
ViewBase <|-- Rect
ViewBase <|-- SimpleText
ViewBase <|-- Image
ViewBase <|-- Line

SimpleText <|-- TextButton

SwingView <|-- SwingRect
SwingView <|-- SwingSimpleText
SwingView <|-- SwingTextButton
SwingView <|-- SwingImage
SwingView <|-- SwingLine

Rect <.. SwingRect
SimpleText <.. SwingSimpleText
TextButton <.. SwingTextButton
Image <.. SwingImage
Line <.. SwingLine

@enduml